# papreca

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  paper.bib  paper.md
.github/workflows/: build-reusable.yml  documentation.yml  draft-pdf.yml  lammps-compatibility.yml  run_ALLtests.yml  run_tests.yml
.github/workflows/templates/: build-test-reusable.yml
Examples/Brownian Self Diffusion/: in_kmc.lmp  in_kmc.ppc  plot_distributions.py  test_brownian.sh
Examples/Phosphate Film Growth from TCP on Fe110/: in_kmc.lmp  in_kmc.ppc  test_phosphates.sh
Examples/Simple Adsorption/: compare_plots.py  test_simple_adsdep.sh
Examples/Simple Adsorption/template/: in_kmc.lmp  in_kmc.ppc  particle.in
Examples/TCP and Toluene/solvated (tcp+toluene)/: TCP.in  in_kmc.lmp  in_kmc.ppc  param.qeq  toluene.in
Examples/TCP and Toluene/unsolvated (pure tcp)/: in_kmc.lmp
Installation/CMake/: CMakeLists.txt
Installation/CMake/Modules/: FindFFTW3.cmake
Installation/Traditional Make/: MakeConfig  MakeFile  traditionalMakeClean.sh  traditionalMakeCompileLIBandSRC.sh
Installation/autobuild/: build_LAMMPS.sh  build_PAPRECA.sh
TCP and Toluene/solvated (tcp+toluene)/: in_kmc.ppc
docs/: annotated.html  annotated_dup.js  bond_8cpp.html  bond_8cpp__incl.map  bond_8cpp__incl.md5  bond_8h.html  bond_8h.js  bond_8h__dep__incl.map  bond_8h__dep__incl.md5  bond_8h__incl.map  bond_8h__incl.md5  bond_8h_source.html  classLAMMPS__NS_1_1FixPAPRECA-members.html  classLAMMPS__NS_1_1FixPAPRECA.html  classLAMMPS__NS_1_1FixPAPRECA.js  classLAMMPS__NS_1_1FixPAPRECA__inherit__graph.map  classLAMMPS__NS_1_1FixPAPRECA__inherit__graph.md5  classPAPRECA_1_1Bond-members.html  classPAPRECA_1_1Bond.html  classPAPRECA_1_1Bond.js  classPAPRECA_1_1BondBreak-members.html  classPAPRECA_1_1BondBreak.html  classPAPRECA_1_1BondBreak.js  classPAPRECA_1_1BondBreak__coll__graph.map  classPAPRECA_1_1BondBreak__coll__graph.md5  classPAPRECA_1_1BondBreak__inherit__graph.map  classPAPRECA_1_1BondBreak__inherit__graph.md5  classPAPRECA_1_1BondForm-members.html  classPAPRECA_1_1BondForm.html  classPAPRECA_1_1BondForm.js  classPAPRECA_1_1BondForm__coll__graph.map  classPAPRECA_1_1BondForm__coll__graph.md5  classPAPRECA_1_1BondForm__inherit__graph.map  classPAPRECA_1_1BondForm__inherit__graph.md5  classPAPRECA_1_1Deposition-members.html  classPAPRECA_1_1Deposition.html  classPAPRECA_1_1Deposition.js  classPAPRECA_1_1Deposition__coll__graph.map  classPAPRECA_1_1Deposition__coll__graph.md5  classPAPRECA_1_1Deposition__inherit__graph.map  (+399 more)
documentation/: Doxyfile  commands.md  essentials.md  examples.md  installation.md  mainpage.md
paper/: paper.bib  paper.md  readme
source/: papreca.cpp
source/libraries/LAMMPS/: fix_papreca.cpp  fix_papreca.h
source/libraries/PAPRECA/: MakeFile  bond.cpp  bond.h  debug.cpp  debug.h  equilibration.cpp  equilibration.h  event.cpp  event.h  event_detect.cpp  event_detect.h  event_execute.cpp  event_execute.h  event_list.cpp  event_list.h  event_select.cpp  event_select.h  export_files.cpp  export_files.h  geometry_calc.cpp  geometry_calc.h  input_file.cpp  input_file.h  lammps_wrappers.cpp  lammps_wrappers.h  mpi_wrappers.cpp  mpi_wrappers.h  papreca.h  papreca_config.cpp  papreca_config.h  papreca_error.cpp  papreca_error.h  rates_calc.cpp  rates_calc.h  sim_clock.cpp  sim_clock.h  utilities.cpp  utilities.h
tests/: README.md
tests/event tests/: README.md  test_all_events.sh
tests/event tests/breaking events/: in_kmc.lmp  in_kmc.ppc  in_kmc_template.ppc  test_breakings.py
tests/event tests/deposition events/: in_kmc.lmp  in_kmc.ppc  in_kmc_template.ppc  test_depositions.py
tests/event tests/diffusion events/: in_kmc.lmp  in_kmc.ppc  in_kmc_template.ppc  test_diffusions.py
tests/event tests/formation events/: in_kmc.lmp  in_kmc.ppc  in_kmc_template.ppc  test_formations.py
tests/event tests/monodesorption events/: in_kmc.lmp  in_kmc.ppc  in_kmc_template.ppc  test_monodesorptions.py
tests/hybrid kMC MD/: README.md  in_kmc.lmp  in_kmc.ppc  test_hybrid.sh
tests/source tests/: CMakeLists.txt  README.MD  run_tests.sh  source_tests.cpp
tests/source tests/input_files/: TCP.in  in_kmc.lmp  in_kmc.ppc
